@@ -1,19 +1,18 @@
 package io.codemodder.plugins.maven.operator;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.xml.stream.XMLStreamException;
 import org.dom4j.DocumentException;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -21,137 +20,144 @@ import org.slf4j.LoggerFactory;
 final class POMOperatorDependencyQueryTest {
   private static final Logger LOGGER = LoggerFactory.getLogger(POMOperatorTest.class);
 
+  /**
+   * Tests whether queryDependency uses the safe query type and retrieves dependencies successfully.
+   * Ensures that dependencies are retrieved when a safe query type is used.
+   */
   @Test
-  void testBasicQuery()
+  void queryDependency_uses_safe_query_type_successfully()
       throws DocumentException, IOException, URISyntaxException, XMLStreamException {
-    for (QueryType queryType : QueryType.values()) {
-      if (queryType != QueryType.NONE) {
-        ProjectModelFactory context = ProjectModelFactory.load(getClass().getResource("pom-1.xml"));
-        context.withQueryType(queryType);
-
-        Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
-
-        LOGGER.debug("Dependencies found: {}", dependencies);
-
-        assertTrue("Dependencies are not empty", !dependencies.isEmpty());
-      }
-    }
-  }
-
-  @Test
-  void testFailedSafeQuery()
-      throws DocumentException, IOException, URISyntaxException, XMLStreamException {
-    ProjectModelFactory context =
-        ProjectModelFactory.load(getClass().getResource("pom-broken.xml"));
-    context.withQueryType(QueryType.SAFE);
+    ProjectModelFactory context = ProjectModelFactory.load(getClass().getResource("pom-1.xml"));
+    context.withSafeQueryType();
 
     Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
 
-    assertTrue("Dependencies are empty", dependencies.isEmpty());
+    LOGGER.debug("Dependencies found: {}", dependencies);
+
+    // "Dependencies are not empty"
+    assertThat(dependencies != null && !dependencies.isEmpty()).isTrue();
   }
 
+  /**
+   * Tests queryDependency for a broken POM, expecting no dependencies. Verifies that the query for
+   * a broken POM returns an empty list of dependencies.
+   */
   @Test
-  void testFailedUnsafeQuery()
+  void queryDependency_for_broken_pom_returns_no_dependencies()
       throws DocumentException, IOException, URISyntaxException, XMLStreamException {
-    Assertions.assertThrows(
-        IllegalStateException.class,
-        () -> {
-          ProjectModelFactory context =
-              ProjectModelFactory.load(getClass().getResource("pom-broken.xml"));
-          context.withQueryType(QueryType.UNSAFE);
+    ProjectModelFactory context =
+        ProjectModelFactory.load(getClass().getResource("pom-broken.xml"));
+    context.withSafeQueryType();
 
-          Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
+    Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
 
-          assertTrue("Dependencies are empty", dependencies.isEmpty());
-        });
+    // "Dependencies are empty"
+    assertThat(dependencies).isEmpty();
   }
 
+  /**
+   * Tests whether queryDependency uses available dependency query commands successfully. Verifies
+   * that the query uses available dependency query commands and returns non-empty dependencies.
+   */
   @Test
-  void testAllQueryTypes()
-      throws DocumentException, IOException, URISyntaxException, XMLStreamException {
+  void queryDependency_uses_available_dependency_query_commands_successfully()
+      throws DocumentException,
+          IOException,
+          URISyntaxException,
+          XMLStreamException,
+          ClassNotFoundException,
+          InstantiationException,
+          IllegalAccessException {
     String[] pomFiles = {"pom-1.xml", "pom-3.xml"};
     for (String pomFile : pomFiles) {
       for (Pair<QueryType, String> chain : CommandChain.AVAILABLE_DEPENDENCY_QUERY_COMMANDS) {
         String commandClassName = "io.codemodder.plugins.maven.operator." + chain.getSecond();
 
         List<Command> commandListOverride = new ArrayList<>();
-        try {
-          Command command = (Command) Class.forName(commandClassName).newInstance();
-          commandListOverride.add(command);
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
-          e.printStackTrace();
-        }
+
+        Command command = (Command) Class.forName(commandClassName).newInstance();
+        commandListOverride.add(command);
 
         ProjectModelFactory context = ProjectModelFactory.load(getClass().getResource(pomFile));
-        context.withQueryType(QueryType.UNSAFE);
+        context.withSafeQueryType();
 
         Collection<Dependency> dependencies =
             POMOperator.queryDependency(context.build(), commandListOverride);
 
-        assertTrue("Dependencies are not empty", !dependencies.isEmpty());
+        // "Dependencies are not empty"
+        assertThat(!dependencies.isEmpty()).isTrue();
       }
     }
   }
 
+  /**
+   * Tests whether queryDependency uses a temporary directory successfully. Verifies that the query
+   * uses a temporary directory and returns non-empty dependencies.
+   */
   @Test
-  void testTemporaryDirectory()
+  void queryDependency_uses_temporary_directory_successfully()
       throws IOException, DocumentException, URISyntaxException, XMLStreamException {
-    for (QueryType queryType : QueryType.values()) {
-      if (queryType != QueryType.NONE) {
-        File tempDirectory = new File("/tmp/mvn-repo-" + System.currentTimeMillis() + ".dir");
 
-        LOGGER.info("Using queryType: " + queryType + " at " + tempDirectory);
+    File tempDirectory = new File("/tmp/mvn-repo-" + System.currentTimeMillis() + ".dir");
 
-        assertFalse("Temp Directory does not exist initially", tempDirectory.exists());
-        assertEquals(
-            "There must be no files",
+    // "Temp Directory does not exist initially"
+    assertThat(tempDirectory).doesNotExist();
+    // "There must be no files"
+    assertThat(
             tempDirectory.list() != null
                 ? (int) Files.list(tempDirectory.toPath()).filter(Files::isDirectory).count()
-                : 0,
-            0);
+                : 0)
+        .isZero();
 
-        ProjectModelFactory context = ProjectModelFactory.load(getClass().getResource("pom-1.xml"));
-        context.withQueryType(queryType);
-        context.withRepositoryPath(tempDirectory);
+    ProjectModelFactory context = ProjectModelFactory.load(getClass().getResource("pom-1.xml"));
+    context.withSafeQueryType();
+    context.withRepositoryPath(tempDirectory.toPath());
 
-        Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
+    Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
 
-        LOGGER.debug("Dependencies found: " + dependencies);
+    LOGGER.debug("Dependencies found: " + dependencies);
 
-        assertTrue("Dependencies are not empty", !dependencies.isEmpty());
+    // "Dependencies are not empty"
+    assertThat(dependencies != null && !dependencies.isEmpty()).isTrue();
 
-        assertTrue("Temp Directory ends up existing", tempDirectory.exists());
-        assertTrue("Temp Directory is a directory", tempDirectory.isDirectory());
-      }
-    }
+    // "Temp Directory ends up existing"
+    assertThat(tempDirectory).exists();
+    // "Temp Directory is a directory"
+    assertThat(tempDirectory).isDirectory();
   }
 
+  /**
+   * Tests whether queryDependency uses a temporary directory and offline mode successfully.
+   * Verifies that the query uses a temporary directory and offline mode, returning non-empty
+   * dependencies.
+   */
   @Test
-  void testTemporaryDirectoryAndFullyOffline()
+  void queryDependency_uses_temporary_directory_and_offline_mode_successfully()
       throws IOException, DocumentException, URISyntaxException, XMLStreamException {
-    for (QueryType queryType : QueryType.values()) {
-      if (queryType != QueryType.NONE && queryType == QueryType.SAFE) {
-        File tempDirectory = Files.createTempDirectory("mvn-repo").toFile();
 
-        ProjectModelFactory context = ProjectModelFactory.load(getClass().getResource("pom-1.xml"));
-        context.withQueryType(queryType);
-        context.withRepositoryPath(tempDirectory);
-        context.withOffline(true);
+    Path tempDirectory = Files.createTempDirectory("mvn-repo");
 
-        Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
+    ProjectModelFactory context = ProjectModelFactory.load(getClass().getResource("pom-1.xml"));
+    context.withSafeQueryType();
+    context.withRepositoryPath(tempDirectory);
 
-        LOGGER.debug("Dependencies found: " + dependencies);
+    Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
 
-        assertTrue("Dependencies are not empty", !dependencies.isEmpty());
-      }
-    }
+    LOGGER.debug("Dependencies found: " + dependencies);
+
+    // "Dependencies are not empty"
+    assertThat(!dependencies.isEmpty()).isTrue();
   }
 
+  /**
+   * Tests whether queryDependency handles a synthetic dependency. Verifies the handling of
+   * synthetic dependencies in the query.
+   */
   @Test
-  void testOnSyntheticDependency() throws Exception {
-    File tempDirectory = Files.createTempDirectory("mvn-repo").toFile();
+  void queryDependency_handles_synthetic_dependency() throws Exception {
+    Path tempDirectory = Files.createTempDirectory("mvn-repo");
 
-    Path tempPom = new File(tempDirectory, "pom.xml").toPath();
+    Path tempPom = tempDirectory.resolve("pom.xml");
 
     String randomName = "random-artifact-" + System.currentTimeMillis();
 
@@ -180,32 +186,31 @@ final class POMOperatorDependencyQueryTest {
                 "</project>")
             .getBytes());
 
-    ProjectModelFactory context = ProjectModelFactory.load(tempPom.toFile());
-    context.withQueryType(QueryType.SAFE);
+    ProjectModelFactory context = ProjectModelFactory.load(tempPom);
+    context.withSafeQueryType();
     context.withRepositoryPath(tempDirectory);
-    context.withOffline(true);
 
     Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
 
     LOGGER.debug("Dependencies found: " + dependencies);
 
-    assertTrue("Dependencies are not empty", !dependencies.isEmpty());
+    // "Dependencies are not empty"
+    assertThat(!dependencies.isEmpty()).isTrue();
 
-    assertTrue(
-        "Random name matches",
-        dependencies.stream()
-            .collect(Collectors.toList())
-            .get(0)
-            .getArtifactId()
-            .equals(randomName));
+    // "Random name matches"
+    assertThat(dependencies.stream().toList().get(0).getArtifactId()).isEqualTo(randomName);
   }
 
+  /**
+   * Tests queryDependency handles a composite synthetic dependency. Verifies the handling of
+   * composite synthetic dependencies in the query.
+   */
   @Test
-  void testOnCompositeSyntheticDependency() throws Exception {
-    File tempDirectory = Files.createTempDirectory("mvn-repo").toFile();
+  void queryDependency_handles_composite_synthetic_dependency() throws Exception {
+    Path tempDirectory = Files.createTempDirectory("mvn-repo");
 
-    Path tempParentPom = new File(tempDirectory, "pom-parent.xml").toPath();
-    Path tempPom = new File(tempDirectory, "pom.xml").toPath();
+    Path tempParentPom = tempDirectory.resolve("pom-parent.xml");
+    Path tempPom = tempDirectory.resolve("pom.xml");
 
     String randomName = "random-artifact-" + System.currentTimeMillis();
 
@@ -269,83 +274,31 @@ final class POMOperatorDependencyQueryTest {
     Files.write(tempParentPom, parentPomContent.getBytes());
     Files.write(tempPom, pomContent.getBytes());
 
-    ProjectModelFactory context = ProjectModelFactory.load(tempPom.toFile());
-    context.withQueryType(QueryType.SAFE);
+    ProjectModelFactory context = ProjectModelFactory.load(tempPom);
+    context.withSafeQueryType();
     context.withRepositoryPath(tempDirectory);
-    context.withOffline(true);
 
     Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
 
     LOGGER.debug("Dependencies found: " + dependencies);
 
-    assertTrue("Dependencies are not empty", !dependencies.isEmpty());
+    // "Dependencies are not empty"
+    assertThat(!dependencies.isEmpty()).isTrue();
 
-    assertTrue(
-        "Random name matches",
-        dependencies.stream()
-            .collect(Collectors.toList())
-            .get(0)
-            .getArtifactId()
-            .equals(randomName));
+    // "Random name matches"
+    assertThat(dependencies.stream().toList().get(0).getArtifactId()).isEqualTo(randomName);
   }
 
+  /**
+   * Tests queryDependency handles composite incomplete synthetic dependency but with a parser.
+   * Verifies the handling of composite incomplete synthetic dependencies with a parser in the
+   * query.
+   */
   @Test
-  void testOnCompositeSyntheticDependencyIncompleteWithoutParsing() throws Exception {
-    File tempDirectory = Files.createTempDirectory("mvn-repo").toFile();
-    Path tempPom = new File(tempDirectory, "pom.xml").toPath();
-    String randomName = "random-artifact-" + System.currentTimeMillis();
-
-    String pomContent =
-        String.join(
-            "\n",
-            "<?xml version=\"1.0\" encoding=\"UTF-8\"?>",
-            "<project",
-            "        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"",
-            "        xmlns=\"http://maven.apache.org/POM/4.0.0\"",
-            "        xsi:schemaLocation=\"http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd\">",
-            "    <modelVersion>4.0.0</modelVersion>",
-            "",
-            "    <groupId>br.com.ingenieux</groupId>",
-            "    <artifactId>pom-operator</artifactId>",
-            "    <version>0.0.1-SNAPSHOT</version>",
-            "    <parent>",
-            "      <artifactId>somethingelse</artifactId>",
-            "      <groupId>br.com.ingenieux</groupId>",
-            "      <version>1</version>",
-            "      <relativePath>./pom-parent.xml</relativePath>",
-            "    </parent>",
-            "    <dependencies>",
-            "        <dependency>",
-            "            <groupId>dummyorg</groupId>",
-            "            <artifactId>" + randomName + "</artifactId>",
-            "            <version>2.1.3</version>",
-            "        </dependency>",
-            "        <dependency>",
-            "            <groupId>dummyorg</groupId>",
-            "            <artifactId>managed-" + randomName + "</artifactId>",
-            "        </dependency>",
-            "    </dependencies>",
-            "</project>");
-
-    Files.write(tempPom, pomContent.getBytes());
-
-    ProjectModelFactory context = ProjectModelFactory.load(tempPom.toFile());
-    context.withQueryType(QueryType.SAFE);
-    context.withRepositoryPath(tempDirectory);
-    context.withOffline(true);
-
-    List<Command> commandList = getCommandListFor("QueryByEmbedder", "QueryByResolver");
-    Collection<Dependency> dependencies = POMOperator.queryDependency(context.build(), commandList);
-
-    LOGGER.debug("Dependencies found: {}", dependencies);
-
-    assertTrue("Dependencies are empty", dependencies.isEmpty());
-  }
-
-  @Test
-  void testOnCompositeSyntheticDependencyIncompleteButWithParser() throws Exception {
-    File tempDirectory = Files.createTempDirectory("mvn-repo").toFile();
-    Path tempPom = new File(tempDirectory, "pom.xml").toPath();
+  void queryDependency_handles_composite_incomplete_synthetic_dependency_but_with_parser()
+      throws Exception {
+    Path tempDirectory = Files.createTempDirectory("mvn-repo");
+    Path tempPom = tempDirectory.resolve("pom.xml");
     String randomName = "random-artifact-" + System.currentTimeMillis();
 
     String pomContent =
@@ -391,17 +344,17 @@ final class POMOperatorDependencyQueryTest {
 
     Files.write(tempPom, pomContent.getBytes());
 
-    ProjectModelFactory context = ProjectModelFactory.load(tempPom.toFile());
-    context.withQueryType(QueryType.SAFE);
+    ProjectModelFactory context = ProjectModelFactory.load(tempPom);
+    context.withSafeQueryType();
     context.withRepositoryPath(tempDirectory);
-    context.withOffline(true);
 
     List<Command> commandList = getCommandListFor("QueryByParsing");
     Collection<Dependency> dependencies = POMOperator.queryDependency(context.build(), commandList);
 
     LOGGER.debug("Dependencies found: {}", dependencies);
 
-    assertTrue("Dependencies are empty", !dependencies.isEmpty());
+    // "Dependencies are empty"
+    assertThat(!dependencies.isEmpty()).isTrue();
 
     Dependency foundDependency =
         dependencies.stream()
@@ -412,7 +365,8 @@ final class POMOperatorDependencyQueryTest {
             .findAny()
             .orElse(null);
 
-    assertTrue("There's a dependency with managed-version", foundDependency != null);
+    // "There's a dependency with managed-version",
+    assertThat(foundDependency).isNotNull();
   }
 
   private List<Command> getCommandListFor(String... names) {
@@ -433,20 +387,25 @@ final class POMOperatorDependencyQueryTest {
     return commandList;
   }
 
+  /**
+   * Tests queryDependency handles offline mode. Verifies the behavior of dependency retrieval in
+   * offline mode.
+   */
   @Test
-  void testOfflineQueryResolution() throws Exception {
-    File tempDirectory = Files.createTempDirectory("mvn-repo").toFile();
-    File pomFile = new File(getClass().getResource("nested/child/pom/pom-3-child.xml").getFile());
+  void queryDependency_handles_offline_mode() throws Exception {
+    Path tempDirectory = Files.createTempDirectory("mvn-repo");
+    Path pomFilePath =
+        Paths.get(getClass().getResource("nested/child/pom/pom-3-child.xml").toURI());
 
-    ProjectModelFactory context = ProjectModelFactory.load(pomFile);
-    context.withQueryType(QueryType.SAFE);
+    ProjectModelFactory context = ProjectModelFactory.load(pomFilePath);
+    context.withSafeQueryType();
     context.withRepositoryPath(tempDirectory);
-    context.withOffline(true);
 
     Collection<Dependency> dependencies = POMOperator.queryDependency(context.build());
 
     LOGGER.debug("Dependencies found: {}", dependencies);
 
-    assertTrue("Dependencies are empty", dependencies.isEmpty());
+    // "Dependencies are empty"
+    assertThat(dependencies).isEmpty();
   }
 }
